Thu Jun  9 13:16:53 2005  Simon McQueen  <sm@prismtech.com>

        * bin/tao_other_tests.lst:

          Added Bug_2137_Regression test.

Thu Jun  9 09:31:28 2005  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Updated with late release note submissions.

Wed Jun 08 08:43:59 2005  Simon McQueen  <sm@prismtech.com>

        * ACE version 5.4.6 released.

Wed Jun  8 11:21:50 2005  Simon McQueen  <sm@prismtech.com>

        * NEWS:

          Updated with release note entries.

Fri Jun  3 13:42:18 2005  Steve Huston  <shuston@riverace.com>

	* ace/String_Base.h: Removed ACE_INLINE from the operator+ functions.
	  The functions are defined in String_Base.cpp. Fixes compile errors
	  on Solaris autoconf build.

	* examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Added missing
	  #include for ace/Null_Mutex.h and ace/Null_Condition.h since this
	  example uses ACE_Task<ACE_NULL_SYNCH>.

	* Kokyu/DSRT_Sched_Queue_T.h: Added missing #include "ace/Null_Mutex.h"

Thu Jun  2 13:58:29 2005  Steve Huston  <shuston@riverace.com>

	* ace/Local_Tokens.cpp (~ACE_TSS_TPQ_Entry): Replaced missing '}' from:
	  Mon May 30 18:10:56 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

Wed Jun  1 18:33:29 2005  Steve Huston  <shuston@riverace.com>

	* examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Reordered some
	  #include directives so files needed by ace/Connector.h are in before
	  ace/Connector.h. Fixes optimized autoconf build on AIX.

Wed Jun  1 12:19:27 2005  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_signal.inl: Reverted:
	  Tue May 31 18:51:31 2005  Steve Huston  <shuston@riverace.com>
	  It broke builds on Linux and BSD, at least, with compile errors like:
	  `::' does not have a class or union named `sigaction'
	  I think this is probably an issue of including files in the wrong
	  order and it only trips up HP-UX, but I'm not sure.

Wed Jun  1 07:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst: