@@ -11,6 +11,7 @@
 
 #include "ace/Auto_Ptr.h"
 #include "ace/INET_Addr.h"
+#include "ace/Time_Value.h"
 
 #include "RMCast_Export.h"
 
@@ -34,6 +35,7 @@ namespace ACE_RMCast
     virtual void
     send (void const* buf, size_t s);
 
+
     // Block if message is not available. Upon successful completion
     // return the next message. Otherwise return -1 and errno set to
     // indicate the error. ENOENT indicates that the sender does not
@@ -42,6 +44,17 @@ namespace ACE_RMCast
     virtual ssize_t
     recv (void* buf, size_t s);
 
+
+    // Block for up to <timeout> until message is available. Upon
+    // successful completion return the next message. Otherwise
+    // return -1 and errno set to indicate the error. ETIME indicates
+    // that the operation timed out. ENOENT indicates that the sender
+    // does not retain the data for this message anymore.
+    //
+    virtual ssize_t
+    recv (void* buf, size_t s, ACE_Time_Value const& timeout);
+
+
     // Block if message is not available. Upon successful completion
     // return the size of the next message. Otherwise return -1 and
     // errno set to indicate the error. ENOENT indicates that the
@@ -49,6 +62,16 @@ namespace ACE_RMCast
     //
     virtual ssize_t
     size ();
+
+
+    // Block for up to <timeout> until message is available. Upon
+    // successful completion return the size of the next message.
+    // Otherwise return -1 and errno set to indicate the error.
+    // ETIME indicates that the operation timed out. ENOENT indicates
+    // that the sender does not retain the data for this message anymore.
+    //
+    virtual ssize_t
+    size (ACE_Time_Value const& timeout);
 
   public:
     // Reactor interface. Note that the handle returned by get_handle()
