@@ -1,3 +1,11 @@
+Thu Jun  9 16:18:32 2005  Boris Kolpackov  <boris@kolpackov.net>
+
+	* protocols/ace/RMCast/Link.cpp:
+	* protocols/ace/RMCast/Socket.cpp:
+	* protocols/ace/RMCast/Socket.h:
+
+	  Implemented timed recv() and size().
+
 Thu Jun  9 13:16:53 2005  Simon McQueen  <sm@prismtech.com>
 
         * bin/tao_other_tests.lst:
